# stream-clean

./: .gitignore  CMakeLists.txt  README.md  cache.cpp  frequencies.greina29  frequencies.hwl4  frequencies.santis  makefile  makefile.gcc  makefile.intel  makefile.papi  set_frequency.greina.sh  stream.c  stream_papi.c  test.sh  test_pstate.numactl.sh  test_pstate.sh
